; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/sqlite3/extr_shell.c_createSelftestTable.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/sqlite3/extr_shell.c_createSelftestTable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@.str = private unnamed_addr constant [1097 x i8] c"SAVEPOINT selftest_init;\0ACREATE TABLE IF NOT EXISTS selftest(\0A  tno INTEGER PRIMARY KEY,\0A  op TEXT,\0A  cmd TEXT,\0A  ans TEXT\0A);CREATE TEMP TABLE [_shell$self](op,cmd,ans);\0AINSERT INTO [_shell$self](rowid,op,cmd)\0A  VALUES(coalesce((SELECT (max(tno)+100)/10 FROM selftest),10),\0A         'memo','Tests generated by --init');\0AINSERT INTO [_shell$self]\0A  SELECT 'run',\0A    'SELECT hex(sha3_query(''SELECT type,name,tbl_name,sql FROM sqlite_master ORDER BY 2'',224))',\0A    hex(sha3_query('SELECT type,name,tbl_name,sql FROM sqlite_master ORDER BY 2',224));\0AINSERT INTO [_shell$self]\0A  SELECT 'run',    'SELECT hex(sha3_query(''SELECT * FROM \22' ||        printf('%w',name) || '\22 NOT INDEXED'',224))',\0A    hex(sha3_query(printf('SELECT * FROM \22%w\22 NOT INDEXED',name),224))\0A  FROM (\0A    SELECT name FROM sqlite_master\0A     WHERE type='table'\0A       AND name<>'selftest'\0A       AND coalesce(rootpage,0)>0\0A  )\0A ORDER BY name;\0AINSERT INTO [_shell$self]\0A  VALUES('run','PRAGMA integrity_check','ok');\0AINSERT INTO selftest(tno,op,cmd,ans)  SELECT rowid*10,op,cmd,ans FROM [_shell$self];\0ADROP TABLE [_shell$self];\00", align 1
@stderr = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [37 x i8] c"SELFTEST initialization failure: %s\0A\00", align 1
@.str.2 = private unnamed_addr constant [22 x i8] c"RELEASE selftest_init\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_3__*)* @createSelftestTable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @createSelftestTable(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  %3 = alloca i8*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  store i8* null, i8** %3, align 8
  %4 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %5 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = call i32 @sqlite3_exec(i32 %6, i8* getelementptr inbounds ([1097 x i8], [1097 x i8]* @.str, i64 0, i64 0), i32 0, i32 0, i8** %3)
  %8 = load i8*, i8** %3, align 8
  %9 = icmp ne i8* %8, null
  br i1 %9, label %10, label %16

10:                                               ; preds = %1
  %11 = load i32, i32* @stderr, align 4
  %12 = load i8*, i8** %3, align 8
  %13 = call i32 @utf8_printf(i32 %11, i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str.1, i64 0, i64 0), i8* %12)
  %14 = load i8*, i8** %3, align 8
  %15 = call i32 @sqlite3_free(i8* %14)
  br label %16

16:                                               ; preds = %10, %1
  %17 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %18 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = call i32 @sqlite3_exec(i32 %19, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.2, i64 0, i64 0), i32 0, i32 0, i8** null)
  ret void
}

declare dso_local i32 @sqlite3_exec(i32, i8*, i32, i32, i8**) #1

declare dso_local i32 @utf8_printf(i32, i8*, i8*) #1

declare dso_local i32 @sqlite3_free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
